--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <style type="text/tailwindcss">
       @theme {
-        --color-clifford: #da373d;
+        --color-primary: #da373d;
       }
     </style>
   </head>
